[gd_scene load_steps=24 format=2]

[ext_resource path="res://scripts/magic.gd" type="Script" id=1]
[ext_resource path="res://example_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://scripts/load_settings.gd" type="Script" id=3]
[ext_resource path="res://assets/default_fonts/Inconsolata-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://scroll.tres" type="Theme" id=5]
[ext_resource path="res://other/tut.png" type="Texture" id=6]
[ext_resource path="res://other/boot_image.png" type="Texture" id=7]
[ext_resource path="res://shaders/blur_shader.tres" type="Material" id=8]

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.188235, 0.172549, 0.172549, 1 )
border_color = Color( 0, 1, 0.94902, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.0901961, 0.0901961, 0.0901961, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 1, 0.933333, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.0901961, 0.0901961, 0.0901961, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.0901961, 0.0901961, 0.0901961, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.0901961, 0.0901961, 0.0901961, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 1, 0.941176, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0901961, 0.0901961, 0.0901961, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
corner_detail = 4

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.0901961, 0.0901961, 0.0901961, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 1, 0.996078, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.223529, 0.223529, 0.223529, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.0784314, 0.0784314, 0.0784314, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.137255, 0.137255, 0.137255, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.0901961, 0.0901961, 0.0901961, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.188235, 0.172549, 0.172549, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 1, 0.94902, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="DynamicFont" id=8]
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=16]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.133333, 0.133333, 0.133333, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("font_helper_logo:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=17]
resource_name = "fade"
length = 1.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 1.3 ),
"transitions": PoolRealArray( -0.5, -0.5, -0.5 ),
"update": 0,
"values": [ Color( 0.133333, 0.133333, 0.133333, 1 ), Color( 0.133333, 0.133333, 0.133333, 1 ), Color( 0.133333, 0.133333, 0.133333, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("font_helper_logo:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.9 ),
"transitions": PoolRealArray( -0.5, -0.5, -0.5 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="main" type="Control" groups=["main"]]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="bg" type="ColorRect" parent="."]
self_modulate = Color( 1, 1, 1, 0.627451 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="add_font" type="Button" parent="bg"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -156.0
margin_top = 17.0
margin_right = -33.0
margin_bottom = 43.0
grow_horizontal = 0
grow_vertical = 2
focus_mode = 0
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 15 )
custom_styles/focus = SubResource( 11 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 4 )
enabled_focus_mode = 0
text = "Add font"

[node name="default_font" type="OptionButton" parent="bg"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 33.5
margin_top = 17.0
margin_right = 121.5
margin_bottom = 43.0
grow_vertical = 2
focus_mode = 0
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 5 )
enabled_focus_mode = 0

[node name="example_color" type="ColorRect" parent="bg"]
anchor_top = 0.16
anchor_right = 1.0
anchor_bottom = 0.35
rect_min_size = Vector2( 682, 76 )
color = Color( 0.0705882, 0.0705882, 0.0705882, 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="font_example" type="Label" parent="bg/example_color"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -341.0
margin_top = -28.5
margin_bottom = 28.5
grow_horizontal = 2
grow_vertical = 2
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_y = 2
custom_constants/shadow_as_outline = 0
custom_fonts/font = ExtResource( 2 )
text = "ENGLISH:
abcdefghijklmnopqrstuvwxyz
ABCDEFGHIJKLMNOPQRSTUVWXYZ"
align = 1
valign = 1

[node name="font_example2" type="Label" parent="bg/example_color"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_top = -28.5
margin_right = 341.0
margin_bottom = 28.5
grow_horizontal = 2
grow_vertical = 2
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_y = 2
custom_constants/shadow_as_outline = 0
custom_fonts/font = ExtResource( 2 )
text = "RUSSIAN:
абвгдеёжзийклмнопрстуфхцчшщъыьэюя
АБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯ"
align = 1
valign = 1

[node name="dragNdrop" type="Label" parent="bg"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -136.0
margin_top = 41.0
margin_right = 136.0
margin_bottom = 61.0
grow_horizontal = 2
grow_vertical = 2
text = "You can drop files there"
align = 1
valign = 1

[node name="_or" type="Label" parent="bg"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -92.0
margin_top = 20.0
margin_right = 92.0
margin_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
text = "OR"
align = 1
valign = 1

[node name="export" type="Button" parent="bg"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -34.5
margin_top = 171.0
margin_right = 34.5
margin_bottom = 197.0
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 464.5, 83 )
focus_mode = 0
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 13 )
custom_styles/focus = SubResource( 11 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 4 )
enabled_focus_mode = 0
text = "Export"

[node name="reload" type="Button" parent="bg"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 261.5
margin_top = 19.0
margin_right = 330.5
margin_bottom = 45.0
grow_horizontal = 0
grow_vertical = 2
rect_pivot_offset = Vector2( 464.5, 83 )
focus_mode = 0
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 13 )
custom_styles/focus = SubResource( 11 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 4 )
enabled_focus_mode = 0
text = "Reload"

[node name="select_folder" type="Button" parent="bg"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -66.5
margin_top = 139.0
margin_right = 66.5
margin_bottom = 165.0
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 464.5, 83 )
focus_mode = 0
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 13 )
custom_styles/focus = SubResource( 11 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 4 )
enabled_focus_mode = 0
text = "Select export folder"

[node name="rename_box" type="ScrollContainer" parent="."]
material = ExtResource( 8 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -223.0
margin_top = -44.0
margin_right = 224.0
margin_bottom = 132.0
theme = ExtResource( 5 )
custom_styles/bg = SubResource( 1 )
follow_focus = true

[node name="v_container" type="VBoxContainer" parent="rename_box"]
custom_constants/separation = 8

[node name="add_dublicate" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 225.0
margin_top = -44.0
margin_right = 252.0
margin_bottom = -18.0
focus_mode = 0
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 14 )
custom_styles/focus = SubResource( 11 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 4 )
enabled_focus_mode = 0
text = "+"

[node name="select_font_popup" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -232.5
margin_top = -126.0
margin_right = 232.5
margin_bottom = 126.0
window_title = "Открыть файл"
resizable = true
mode = 0
access = 2
show_hidden_files = true
current_dir = "/Users/danil/Documents/pf_fonts_rename"
current_path = "/Users/danil/Documents/pf_fonts_rename/"

[node name="select_export_folder" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -232.5
margin_top = -126.0
margin_right = 232.5
margin_bottom = 126.0
window_title = "Открыть каталог"
resizable = true
mode = 2
access = 2
show_hidden_files = true
current_dir = "/"
current_path = "/"

[node name="save_progress" type="ProgressBar" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -74.5
margin_top = -29.0
margin_right = 74.5
margin_bottom = -9.0
custom_styles/fg = SubResource( 2 )
custom_styles/bg = SubResource( 3 )
max_value = 7.0

[node name="settings_menu" type="PopupMenu" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -127.5
margin_top = -81.5
margin_right = 127.5
margin_bottom = 81.5
custom_styles/panel = SubResource( 7 )
allow_search = true

[node name="load_preset" type="CheckButton" parent="settings_menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.5
margin_top = -36.0
margin_right = 80.5
margin_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 13 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 6 )
custom_styles/hover_pressed = SubResource( 6 )
custom_styles/normal = SubResource( 6 )
enabled_focus_mode = 0
text = "Load preset"

[node name="language" type="OptionButton" parent="settings_menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -44.0
margin_top = -69.0
margin_right = 44.0
margin_bottom = -43.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 5 )
enabled_focus_mode = 0
text = "Language"
align = 1

[node name="save_preset" type="Button" parent="settings_menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.5
margin_top = 11.0
margin_right = 50.5
margin_bottom = 37.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/focus = SubResource( 12 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 4 )
enabled_focus_mode = 0
text = "Save as preset"

[node name="restore_preset" type="Button" parent="settings_menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -51.0
margin_top = 43.0
margin_right = 51.0
margin_bottom = 69.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = SubResource( 11 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 4 )
enabled_focus_mode = 0
text = "Restore preset"

[node name="open_settings_tip" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -20.0
margin_right = 175.0
custom_colors/font_color = Color( 1, 1, 1, 0.380392 )
custom_fonts/font = SubResource( 8 )
text = "Press F2 to open settings"

[node name="tutor" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="picture" type="TextureRect" parent="tutor"]
margin_left = 182.0
margin_top = -151.0
margin_right = 639.0
margin_bottom = -6.0
texture = ExtResource( 6 )

[node name="text" type="Label" parent="tutor"]
margin_top = -88.0
margin_right = 171.0
margin_bottom = -45.0
text = "Use debug 
For build uncheck the box"

[node name="fade_anim" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.133333, 0.133333, 0.133333, 1 )

[node name="animation_player" type="AnimationPlayer" parent="fade_anim"]
anims/RESET = SubResource( 16 )
anims/fade = SubResource( 17 )

[node name="font_helper_logo" type="TextureRect" parent="fade_anim"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 7 )
expand = true

[connection signal="pressed" from="bg/add_font" to="." method="add_font_bt"]
[connection signal="item_selected" from="bg/default_font" to="." method="font_selected"]
[connection signal="pressed" from="bg/export" to="." method="export"]
[connection signal="pressed" from="bg/reload" to="." method="reload_bt"]
[connection signal="pressed" from="bg/select_folder" to="." method="folder_select"]
[connection signal="pressed" from="add_dublicate" to="." method="add_bt"]
[connection signal="file_selected" from="select_font_popup" to="." method="add_font"]
[connection signal="dir_selected" from="select_export_folder" to="." method="export_folder_selected"]
[connection signal="popup_hide" from="settings_menu" to="bg" method="_settings_menu_popup_hide"]
[connection signal="toggled" from="settings_menu/load_preset" to="bg" method="load_preset_toggled"]
[connection signal="item_selected" from="settings_menu/language" to="bg" method="_on_language_item_selected"]
[connection signal="pressed" from="settings_menu/save_preset" to="bg" method="_save_presset_pressed"]
[connection signal="pressed" from="settings_menu/restore_preset" to="bg" method="_restore_presset_pressed"]
